Fix z-indexs with new form field types

--- a/app/assets/stylesheets/mortgage_calculator/layouts/_sticky.scss
+++ b/app/assets/stylesheets/mortgage_calculator/layouts/_sticky.scss
@@ -13,7 +13,7 @@
   background-color: rgb(255, 255, 255);
   background-color: rgba(255, 255, 255, 0.95);
   border-bottom: 1px solid #ccc;
-  z-index: 1;
+  z-index: 3;
 
   .slider--with-follower-top {
     transition: margin 0.3s ease-out;
